--- a/stu01/src/main/resources/templates/layui/manage/index.html
+++ b/stu01/src/main/resources/templates/layui/manage/index.html
@@ -23,7 +23,7 @@
                 <li class="layui-nav-item layui-show-xs-inline-block " lay-header-event="menuLeft">
                     <i class="layui-icon layui-icon-spread-left"></i>
                 </li>
-                <li class="layui-nav-item layui-hide-xs"><a href="/">前台</a></li>
+                <li class="layui-nav-item layui-hide-xs"><a href="/index">前台</a></li>
                 
                 <li class="layui-nav-item">
                     <a href="javascript:;">导航组</a>
