--- a/stu01/src/main/resources/templates/layui/manage/categories.html
+++ b/stu01/src/main/resources/templates/layui/manage/categories.html
@@ -249,19 +249,33 @@ layui.use(['table', 'dropdown'], function(){
     obj.update(update);
   });
   
-    upload.render({
-    elem: '#ID-upload-demo-choose',
-    url: '', // 此处配置你自己的上传接口即可
-    auto: false,
-    // multiple: true,
-    bindAction: '#ID-upload-demo-action',
-    done: function(res){
-      layer.msg('上传成功');
-      console.log(res)
-    }
+  upload.render({
+	    elem: '.demo-class-accept', // 绑定多个元素
+	    url: 'addcategory', // 此处配置你自己的上传接口即可
+		before: function(obj){
+	      element.progress('filter-demo', '0%'); // 进度条复位
+	      layer.msg('上传中', {icon: 16, time: 0});
+	    },
+
+		progress: function(n, elem, e){
+	      element.progress('filter-demo', n + '%'); // 可配合 layui 进度条元素使用
+	      if(n == 100){
+	        layer.msg('上传完毕', {icon: 1});
+	      }
+	    },
+		data:{_token: '{{csrf_token()}}'},
+	    accept: 'file', // 普通文件
+	    done: function(res){
+	      layer.msg(res.msg, {icon: 1});
+	      window.location.reload();
+	      
+	      
+	    }
+	  });  
+    
   });
   
-});
+
 </script>
 </body>
 </html>
