--- a/stu01/src/main/resources/templates/layui/manage/carousel.html
+++ b/stu01/src/main/resources/templates/layui/manage/carousel.html
@@ -128,7 +128,7 @@ layui.use(function(){
 									data:formData,
 									processData:false,
 									contentType:false,
-									//success:window.location.reload(),
+									success:function(xhr){window.location.reload()},
 											
 
 								
