--- a/stu01/src/main/resources/templates/layui/manage/categories.html
+++ b/stu01/src/main/resources/templates/layui/manage/categories.html
@@ -165,7 +165,7 @@ layui.use(['table', 'dropdown'], function(){
 									data:formData,
 									processData:false,
 									contentType:false,
-									success:window.location.reload(),
+									success:function(xhr){window.location.reload()},
 											
 
 								
